force-app/main/default/objects/pi__AsyncRequest__c/pi__AsyncRequest__c.object-meta.xml
<CustomObject>
    <label>AsyncRequest</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>AsyncRequest</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AsyncRequests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>