force-app/main/default/objects/pi__AsyncRequest__c/fields/pi__Repeat_Type__c.field-meta.xml
<CustomField>
    <fullName>pi__Repeat_Type__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Repeat Type</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>