force-app/main/default/objects/pi__AsyncRequest__c/fields/pi__RequestId__c.field-meta.xml
<CustomField>
    <fullName>pi__RequestId__c</fullName>
    <description>Unique ID of the request</description>
    <externalId>true</externalId>
    <label>Request ID</label>
    <length>45</length>
    <required>true</required>
    <type>Text</type>
</CustomField>