force-app/main/default/objects/pi__AsyncRequest__c/fields/pi__Scheduled_Time__c.field-meta.xml
<CustomField>
    <fullName>pi__Scheduled_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Scheduled Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>